Updated mongodb URI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=demo
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=demo
+
+spring.data.mongodb.uri=mongodb://heroku_7339tqfz:8mlirs79v0l6ekcdcsq754cifa@ds161860.mlab.com:61860/heroku_7339tqfz
+
+server.port=8013
