mongodbURI to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.database=demo
 
-spring.data.mongodb.uri=mongodb://heroku_7339tqfz:8mlirs79v0l6ekcdcsq754cifa@ds161860.mlab.com:61860/heroku_7339tqfz
+#spring.data.mongodb.uri=mongodb://heroku_7339tqfz:8mlirs79v0l6ekcdcsq754cifa@ds161860.mlab.com:61860/heroku_7339tqfz
+spring.data.mongodb.username=heroku_7339tqfz
+spring.data.mongodb.password=8mlirs79v0l6ekcdcsq754cifa
+spring.data.mongodb.host=ds161860.mlab.com
+spring.data.mongodb.port=61860
+spring.data.mongodb.database=heroku_7339tqfz
 
 server.port=8013
